--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,10 @@
 body{
     font-family: 'Inter', sans-serif;
 }
+
+.active{
+    background: #60196d;
+    color: white;
+    padding: .5rem 1rem;
+    border-radius: 25px;
+}
