--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 /* google fonts */
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700&display=swap");
 
 @import url("https://fonts.googleapis.com/css2?family=Cairo+Play:wght@700&display=swap");
 
@@ -12,13 +12,29 @@
 @tailwind components;
 @tailwind utilities;
 
-body{
-    font-family: 'Inter', sans-serif;
+body {
+  font-family: "Inter", sans-serif;
 }
 
-.active{
-    background: #60196d;
-    color: white;
-    padding: .5rem 1rem;
-    border-radius: 25px;
+.active {
+  background: #60196d;
+  color: white;
+  padding: 0.5rem 1rem;
+  border-radius: 25px;
+}
+
+.error-bg {
+  background: url("../src/assets/images/error.jpg");
+  background-position: center;
+  background-size: cover;
+}
+
+.overlay {
+  height: 100vh;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  color: white;
 }
