responsive banner section added

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body {
 }
 
 .active {
-  background: #60196d;
+  background: #2257ca;
   color: white;
   padding: 0.5rem 1rem;
   border-radius: 25px;
